--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,9 +10,8 @@
   <link type="text/css" rel="stylesheet" href="css/ion.rangeSlider.css"  media="screen,projection"/>
   <link type="text/css" rel="stylesheet" href="css/ion.rangeSlider.skinFlat.css"  media="screen,projection"/>
   <link type="text/css" rel="stylesheet" href="css/index.css"  media="screen,projection"/>
-  <link rel="stylesheet" href="css/bootstrap.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Formulario</title>
+  <title>Ev Módulo 6</title>
 </head>
 
 <body>
@@ -21,50 +22,28 @@
       <h1>Buscador</h1>
     </div>
     <div class="colFiltros">
-      <!--<form action="buscador.php" method="post" id="formulario">-->
       <form id="formulario">
         <div class="filtrosContenido">
           <div class="tituloFiltros">
             <h5>Realiza una búsqueda personalizada</h5>
           </div>
 
-            <!--<label for="selectCiudad">Ciudad:</label><br>-->
-            <div class="filtroCiudad input-field">
-            <div class="row margenTop">
-             <div class="filtroCiudad input-field col-sm-offset-2 col-sm-8 pt1">
-               <label for="selectCiudad">Ciudad:</label><br>
-               <select class="form-control tp" id="idCiudad" name="nCiudad">
-
-                 <option value="New York">New York</option>
-                 <option value="Los Angeles">Los Angeles</option>
-                 <option value="Miami">Miami</option>
-                 <option value="Houston">Houston</option>
-                 <option value="Orlando">Orlando</option>
-                 <option value="Washington">Washington</option>
-                 <option value="Todo">Todo</option>
-
-               </select>
-             </div>
-            </div>
+          <!--------------------------------------->
+          <div class="filtroCiudad input-field">
+            <label for="selectCiudad">Ciudad:</label>
+            <select name="ciudad" id="selectCiudad">
+              <option value="select" selected>Elige una ciudad</option>
+            </select>
           </div>
+
             <!------------------------------------------>
-
-          <div class="filtroTipo input-field">
-            <div class="row margenTop">
-             <div class="filtroTipo input-field col-sm-offset-2 col-sm-8 pt1">
-               <label for="selectTipo">Tipo:</label><br>
-
-               <select class="form-control tp" id="idTipo" name="nTipo">
-                 <option value="Casa">Casa</option>
-                 <option value="Casa de Campo">Casa de Campo</option>
-                 <option value="Departamento">Departamento</option>
-                 <option value="Todo">Todo</option>
-
-               </select>
-
-             </div>
+            <div class="filtroTipo input-field">
+              <label for="selecTipo">Tipo:</label><br>
+              <select name="tipo" id="selectTipo">
+                <option value="" selected>Elige un tipo</option>
+              </select>
             </div>
-         </div>
+            <!------------------------------------------>
 
           <div class="filtroPrecio">
             <label for="rangoPrecio">Precio:</label>
@@ -79,20 +58,20 @@
     </div>
 
     <div class="colContenido">
-      <form action="buscadorTodos.php" method="post" id="todos">
-        <div class="tituloContenido card" name="imprimetodo">
-          <h5>Resultados de la búsqueda:</h5>
-          <div class="divider" id="imprimeResultado"></div>
-          <button type="submit" name="todos" class="btn-flat waves-effect" id="mostrarTodos">Mostrar Todos</button>
-        </div>
-      </form
+      <div class="tituloContenido card">
+        <h5>Resultados de la búsqueda:</h5>
+        <div class="divider"></div>
+        <button type="button" name="todos" class="btn-flat waves-effect" id="mostrarTodos">Mostrar Todos</button>
+      </div>
+      <div class="informacion"></div>
     </div>
+
   </div>
 
   <script type="text/javascript" src="js/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="js/ion.rangeSlider.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
-  <script type="text/javascript" src="js/indexSelecciona.js"></script>
+<script type="text/javascript" src="js/indexSelecciona.js"></script>
 </body>
 </html>
